--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="row-cols-1">
         <img
           class="press-logo col-lg-3 col-md-4 col-sm-6"
-          src="images/techcrunch.png"
+          src="images/TechCrunch.png"
           alt="tc-logo"
         />
         <img
