--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>TinDog</title>
-    <link rel = "icon" href = "images/globe.png" type = "image/x-icon">
+    <link rel = "icon" href = "/images/globe.png" type = "image/x-icon">
 
 
     <link
